# gp2040ce-binary-tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  pyproject.toml  tox.ini
.reuse/: dep5
gp2040ce_bintools/: __init__.py  builder.py  config_tree.css  gui.py  pico.py  rp2040.py  storage.py
gp2040ce_bintools/proto_snapshot/: __init__.py  config_pb2.py  enums_pb2.py
requirements/: requirements-dev.txt  requirements.txt
tests/: conftest.py  test_builder.py  test_commands.py  test_gui.py  test_package.py  test_pico.py  test_rp2040.py  test_storage.py
tests/test-files/: test-config.json
tests/test-files/pb2-files/: config_pb2.py  enums_pb2.py  nanopb_pb2.py
tests/test-files/proto-files/: config.proto  enums.proto
