[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "gp2040ce-binary-tools"
description = "Tools for working with GP2040-CE binary dumps."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brian S. Stephan", email = "bss@incorporeal.org"},
]
requires-python = ">=3.8"
dependencies = ["grpcio-tools"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["decorator", "flake8", "flake8-blind-except", "flake8-builtins", "flake8-docstrings", "flake8-executable",
       "flake8-fixme", "flake8-isort", "flake8-logging-format", "flake8-mutable", "flake8-pyproject", "mypy",
       "pip-tools", "pytest", "setuptools-scm"]

[project.scripts]
visualize-storage = "gp2040ce_bintools.storage:visualize"

[tool.flake8]
max-line-length = 120

[tool.mypy]
ignore_missing_imports = true

[tool.setuptools_scm]
write_to = "gp2040ce_bintools/_version.py"
